--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,12 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.commons-collections4-4.1.jar=liberrias\\commons-collections4-4.1.jar
 file.reference.mysql-connector-java-5.1.35-bin.jar=mysql-connector-java-5.1.35-bin.jar
+file.reference.poi-3.16.jar=liberrias\\poi-3.16.jar
+file.reference.poi-ooxml-3.16.jar=liberrias\\poi-ooxml-3.16.jar
+file.reference.poi-ooxml-schemas-3.16.jar=liberrias\\poi-ooxml-schemas-3.16.jar
+file.reference.xmlbeans-2.6.0.jar=liberrias\\xmlbeans-2.6.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -43,7 +48,12 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.35-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.35-bin.jar}:\
+    ${file.reference.commons-collections4-4.1.jar}:\
+    ${file.reference.poi-3.16.jar}:\
+    ${file.reference.poi-ooxml-3.16.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.16.jar}:\
+    ${file.reference.xmlbeans-2.6.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
