--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -12,4 +12,21 @@
     <welcome-file-list>
         <welcome-file>pages/login.jsp</welcome-file>
     </welcome-file-list>
+    
+    <servlet>
+        <servlet-name>obtenerExel</servlet-name>
+        <servlet-class>controller.obtenerExel</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>login</servlet-name>
+        <servlet-class>controller.login</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>obtenerExel</servlet-name>
+        <url-pattern>/obtenerExel</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>login</servlet-name>
+        <url-pattern>/login</url-pattern>
+    </servlet-mapping>
 </web-app>
