--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,8 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.commons-collections4-4.1.jar=liberrias\\commons-collections4-4.1.jar
-file.reference.mysql-connector-java-5.1.35-bin.jar=mysql-connector-java-5.1.35-bin.jar
+file.reference.javax.servlet.jsp.jstl-1.2.3.LIFERAY-PATCHED-2.jar=liberrias\\javax.servlet.jsp.jstl-1.2.3.LIFERAY-PATCHED-2.jar
+file.reference.mysql-connector-java-5.1.47-bin.jar=liberrias\\mysql-connector-java-5.1.47-bin.jar
 file.reference.poi-3.16.jar=liberrias\\poi-3.16.jar
 file.reference.poi-ooxml-3.16.jar=liberrias\\poi-ooxml-3.16.jar
 file.reference.poi-ooxml-schemas-3.16.jar=liberrias\\poi-ooxml-schemas-3.16.jar
@@ -48,12 +49,15 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.35-bin.jar}:\
     ${file.reference.commons-collections4-4.1.jar}:\
     ${file.reference.poi-3.16.jar}:\
     ${file.reference.poi-ooxml-3.16.jar}:\
     ${file.reference.poi-ooxml-schemas-3.16.jar}:\
-    ${file.reference.xmlbeans-2.6.0.jar}
+    ${file.reference.xmlbeans-2.6.0.jar}:\
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.mysql-connector-java-5.1.47-bin.jar}:\
+    ${file.reference.javax.servlet.jsp.jstl-1.2.3.LIFERAY-PATCHED-2.jar}:\
+    ${libs.jstl.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
