--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -21,6 +21,14 @@
         <servlet-name>login</servlet-name>
         <servlet-class>controller.login</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ControllerPdf</servlet-name>
+        <servlet-class>controller.ControllerPdf</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>pdf</servlet-name>
+        <servlet-class>controller.pdf</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>obtenerExel</servlet-name>
         <url-pattern>/obtenerExel</url-pattern>
@@ -28,5 +36,13 @@
     <servlet-mapping>
         <servlet-name>login</servlet-name>
         <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ControllerPdf</servlet-name>
+        <url-pattern>/ControllerPdf</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>pdf</servlet-name>
+        <url-pattern>/pdf</url-pattern>
     </servlet-mapping>
 </web-app>
