--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.commons-collections4-4.1.jar=liberrias\\commons-collections4-4.1.jar
-file.reference.javax.servlet.jsp.jstl-1.2.3.LIFERAY-PATCHED-2.jar=liberrias\\javax.servlet.jsp.jstl-1.2.3.LIFERAY-PATCHED-2.jar
+file.reference.itextpdf-5.5.4.jar=liberrias\\itextpdf-5.5.4.jar
 file.reference.mysql-connector-java-5.1.47-bin.jar=liberrias\\mysql-connector-java-5.1.47-bin.jar
 file.reference.poi-3.16.jar=liberrias\\poi-3.16.jar
 file.reference.poi-ooxml-3.16.jar=liberrias\\poi-ooxml-3.16.jar
@@ -54,10 +54,10 @@ javac.classpath=\
     ${file.reference.poi-ooxml-3.16.jar}:\
     ${file.reference.poi-ooxml-schemas-3.16.jar}:\
     ${file.reference.xmlbeans-2.6.0.jar}:\
-    ${libs.MySQLDriver.classpath}:\
     ${file.reference.mysql-connector-java-5.1.47-bin.jar}:\
-    ${file.reference.javax.servlet.jsp.jstl-1.2.3.LIFERAY-PATCHED-2.jar}:\
-    ${libs.jstl.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${libs.jstl.classpath}:\
+    ${file.reference.itextpdf-5.5.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
