--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -16,6 +16,14 @@
         <servlet-name>ControllerLicenciatura</servlet-name>
         <servlet-class>controller.ControllerLicenciatura</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ControllerPeriodo</servlet-name>
+        <servlet-class>controller.ControllerPeriodo</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ControllerTutores</servlet-name>
+        <servlet-class>controller.ControllerTutores</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>ControllerAlumno</servlet-name>
         <url-pattern>/ControllerAlumno</url-pattern>
@@ -31,6 +39,14 @@
     <servlet-mapping>
         <servlet-name>ControllerLicenciatura</servlet-name>
         <url-pattern>/ControllerLicenciatura</url-pattern>
+    </servlet-mapping>
+     <servlet-mapping>
+        <servlet-name>ControllerPeriodo</servlet-name>
+        <url-pattern>/ControllerPeriodo</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ControllerTutores</servlet-name>
+        <url-pattern>/ControllerTutores</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
