.Se modifico la estadistica de los reportes y se agrego un metodo para el mismo

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -48,6 +48,10 @@
         <servlet-name>ControllerArchivos</servlet-name>
         <servlet-class>controller.ControllerArchivos</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ControllerConstanciaGrupal</servlet-name>
+        <servlet-class>controller.ControllerConstanciaGrupal</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>ControllerAlumno</servlet-name>
         <url-pattern>/ControllerAlumno</url-pattern>
@@ -87,6 +91,10 @@
     <servlet-mapping>
         <servlet-name>ControllerArchivos</servlet-name>
         <url-pattern>/ControllerArchivos</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ControllerConstanciaGrupal</servlet-name>
+        <url-pattern>/ControllerConstanciaGrupal</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
