--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -50,14 +50,12 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${file.reference.commons-collections4-4.1.jar}:\
+    ${file.reference.itextpdf-5.5.4.jar}:\
+    ${file.reference.mysql-connector-java-5.1.47-bin.jar}:\
     ${file.reference.poi-3.16.jar}:\
     ${file.reference.poi-ooxml-3.16.jar}:\
     ${file.reference.poi-ooxml-schemas-3.16.jar}:\
-    ${file.reference.xmlbeans-2.6.0.jar}:\
-    ${libs.MySQLDriver.classpath}:\
-    ${libs.jstl.classpath}:\
-    ${file.reference.itextpdf-5.5.4.jar}:\
-    ${file.reference.mysql-connector-java-5.1.47-bin.jar}
+    ${file.reference.xmlbeans-2.6.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
