.se modificaron los controles, daos ym  modelos donde aparecia licenciatura y se cambio por programa

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -14,7 +14,7 @@
     </servlet>
     <servlet>
         <servlet-name>ControllerLicenciatura</servlet-name>
-        <servlet-class>controller.ControllerLicenciatura</servlet-class>
+        <servlet-class>controller.ControllerPrograma</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>ControllerConstancias</servlet-name>
